# appconvert

./: .gitignore  Makefile  Procfile  README.md  pyproject.toml  settings.toml
appconvert/: app.db  app.py  cryptogames.json  models.py  tokens.json
appconvert/blueprints/restapi/: __init__.py  resources.py
appconvert/blueprints/restapi/resources/: convertcrypt.py  gettokensbycategory.py  validtoken.py
appconvert/blueprints/webui/: __init__.py  views.py
appconvert/blueprints/webui/static/css/: style.css
appconvert/blueprints/webui/static/js/: script.js
appconvert/blueprints/webui/templates/: convert.html  cryptogames.html  defi.html  home.html  imports.html
appconvert/ext/: configuration.py  database.py  nomics.py  serialyzer.py
appconvert/migrations/versions/: bf993c2df052_refactor_tokens_alteração_da_coluna_api_.py
migrations/: env.py
migrations/versions/: 00268b039dd7_tabelas_adicionadas.py  43c43986c66e_coluna_logo_url_adicionada.py  b0f70af2a55c_alteração_nas_colunas_de_metadados_.py  d4734cf10bc3_db_em_perfeito_estado_eu_acho.py  de9389b297b8_migrando_models_da_pagina_cryptogames.py
tests/: conftest.py  pytest.ini
tests/funcional/: test_config.py  test_routes.py  test_routes_api.py  test_routes_page.py
tests/unit/: test_resources_api.py
