[tool.poetry]
name = "appconvert"
version = "1.0.0"
description = "Helping people understand more about cryptocurrencies"
authors = ["Alexander Marques <alexandermarquesoficial@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.12"
Flask = "^2.0.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
ipdb = "^0.13.9"
pytest-flask = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
