[tool.poetry]
name = "appconvert"
version = "1.0.0"
description = "Helping people understand more about cryptocurrencies"
authors = ["Alexander Marques <alexandermarquesoficial@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.12"
Flask = "^2.0.2"
gunicorn = "^20.1.0"
python-dotenv = "^0.19.2"
dynaconf = "^3.1.7"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.1.0"
SQLAlchemy-serializer = "^1.4.1"
Flask-RESTful = "^0.3.9"
requests = "^2.27.1"
pycoingecko = "^2.2.0"
flask-marshmallow = "^0.14.0"
psycopg2-binary = "^2.9.3"
install = "^1.3.5"
numerize = "^0.12"

[tool.poetry.dev-dependencies]
black = {version = "^22.1.0", allow-prereleases = true}
ipdb = "^0.13.9"
pytest-flask = "^1.2.0"
Scrapy = "^2.6.1"
pre-commit = "^2.17.0"
commitizen = "^2.21.2"


[tool.commitizen]
name = "cz_conventional_commits"
version = "1.0.0"
tag_format = "$version"
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
